fixed problem with inputs height on Safari

--- a/src/modern/blocks/sv-dropdown.scss
+++ b/src/modern/blocks/sv-dropdown.scss
@@ -14,7 +14,7 @@
   font-family: inherit;
   font-size: inherit;
   padding: 0.25em 1.5em 0.25em 0.87em;
-  height: 2.18em;
+  height: 2.19em;
   width: 100%;
 }
 .sv-dropdown:focus {
