--- a/src/modern/blocks/sv-text.scss
+++ b/src/modern/blocks/sv-text.scss
@@ -1,7 +1,7 @@
 .sv-text {
   box-sizing: border-box;
   width: 100%;
-  height: 2.18em;
+  height: 2.19em;
   padding: 0.25em 0 0.25em 0.87em;
   border: none;
   border-radius: 0;
